<resources>
    <string name="app_name">Lock</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="current_lock_service_opening">当前锁屏服务为%s状态</string>
    <string name="open_lock_service">开启锁屏服务</string>
    <string name="set_lock_panel_bg">设置锁屏背景</string>
    <string name="start_lock_service_boot_on">开机启动锁屏服务</string>
    <string name="set_lock_top_text">设置锁屏顶部文字</string>
    <string name="set_lock_patter">设置密码匹配模型</string>
    <string name="setting_patter_text">使用一个AB表示对应的小时的数字，使用CD表示分钟对应的数字。例如ABCD 这能匹配12:34的时间，使用AABCDD匹配12:34时需要输入112344</string>
    <string name="save">保存</string>
    <string name="set_lock_item_color">设置锁屏按钮颜色</string>
    <string name="set_lock_text_color">设置锁屏字体颜色</string>
    <string name="empty">无设置</string>
    <string name="title_activity_lock_to_app">LockToAppActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="set_lock_intent_apps">设置锁屏应用跳转</string>
    <string name="lock_to_app_activity_label">设置锁屏跳转应用</string>
</resources>
